--- a/css/styles.css
+++ b/css/styles.css
@@ -32,10 +32,10 @@ li{
 main{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;
+    align-items: center; */
     border-bottom: 2px solid;
-    background-color: lightpink;
+    background-color: rgba(139, 0, 0, 0.8);
 }
 
 footer{
@@ -44,4 +44,69 @@ footer{
     justify-content: center;
     align-items: center;
     border-bottom: 2px solid;
+}
+
+/* Gallery */
+
+#header1{
+    width: 100%;
+    text-align: center;
+}
+
+#container-gallery{
+    background-color: lightgray;
+    margin: 15px auto 15px auto;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: column;
+}
+
+#gallery img{
+    height: 40px;
+    width: 45px;
+    margin: 10px 1px;
+    cursor: pointer;
+    opacity: 0.5;
+    border-radius: 45%;
+}
+
+#gallery{
+    margin: 15px auto 15px auto;
+    padding: 20px;
+}
+
+#gallery img:hover{
+    opacity: 1;
+}
+
+#lightbox{
+    float: right;
+    padding: 50px 5px;
+    width: 100%;
+}
+
+#lightbox img{
+    transition: transform 1s;
+}
+
+#img-lightbox{
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+    
+}
+
+/*Main Page*/
+
+#main-page{
+    justify-content: center;
+    align-items: center;
+}
+
+/*About Page*/
+
+#about-us{
+    justify-content: center;
+    align-items: center;
 }
