--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,19 @@
+* {
+    scroll-behavior: smooth;
+}
+
 body{
-    background-color: lightgray;
+    background-color: rgb(38,82,95);
 }
 
 :any-link{
     text-decoration: none;
     cursor: pointer;
-    color: black;
+    color: white;
 }
 
 header{
-    border-bottom: 2px solid;
+    border-bottom: 1px solid;
 }
 
 nav{
@@ -32,10 +36,8 @@ li{
 main{
     display: flex;
     flex-direction: column;
-    /*justify-content: center;
-    align-items: center; */
-    border-bottom: 2px solid;
-    background-color: rgba(139, 0, 0, 0.8);
+    border-bottom: 1px solid;
+    background-color: rgb(230,220,203);
 }
 
 footer{
@@ -43,7 +45,6 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid;
 }
 
 /* Gallery */
@@ -81,36 +82,6 @@ footer{
     width: 100%;
 }
 
-/*
-
-#gallery{
-    margin: 15px auto 15px auto;
-    padding: 20px;
-}
-
-#gallery img:hover{
-    opacity: 1;
-}
-
-#lightbox{
-    float: right;
-    padding: 50px 5px;
-    width: 100%;
-}
-
-#lightbox img{
-    transition: transform 1s;
-}
-
-#img-lightbox{
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
-    
-}
-*/
-
-
 /*Main Page*/
 
 #main-page{
@@ -118,9 +89,55 @@ footer{
     align-items: center;
 }
 
-/*About Page*/
+#golden{
+    width: 350px;
+    height: 250px;
+    border-radius: 20px;
+}
 
-#about-us{
-    justify-content: center;
-    align-items: center;
+article{
+        max-width: 900px;
+        padding: 10px;
+        max-height: 160px;
+        overflow: hidden;
+        transition: max-height .9s;
+        text-align: justify;
+        margin-top: 20px;
+}
+
+article.open{
+    max-height: 900px;
+}
+
+#paragraphButton{
+        background: black;
+        color: white;
+        padding: 0.6rem;
+        margin-top: 15px;
+        border: none;
+        border-radius: 4px;
+}
+
+#paragraphButton:hover{
+    cursor: pointer;
+    background: rgb(38,82,95);
+}
+
+#contact{
+    font-weight: bold;
+}
+
+#scrollup {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    border-radius: 25px;
+    padding: 15px;
+    background-color: black;
+    color: white;
+}
+
+#scrollup:hover{
+    cursor: pointer;
+    background: rgb(38,82,95);
 }
