--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,13 @@
 }
 
 body{
-    background-color: rgb(38,82,95);
+    background-color: #2A4646;
 }
 
 :any-link{
     text-decoration: none;
     cursor: pointer;
-    color: white;
-}
-
-header{
-    border-bottom: 1px solid;
+    color: #e0fbfc;
 }
 
 nav{
@@ -37,7 +33,8 @@ main{
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid;
-    background-color: rgb(230,220,203);
+    background-color: #d2c1ab;
+    border-radius: 22px;
 }
 
 footer{
@@ -45,6 +42,7 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: #e0fbfc;
 }
 
 /* Gallery */
@@ -55,7 +53,6 @@ footer{
 }
 
 #containergallery{
-    background-color: lightgray;
     margin: 20px auto 50px auto;
     padding: 20px;
     border-radius: 20px;
@@ -66,7 +63,7 @@ footer{
     padding: 20px; 
     width: 400px; 
     height: 400px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    box-shadow: 0 0 20px #ba7d4f;
     overflow: hidden;
 }
 
@@ -95,7 +92,7 @@ footer{
     border-radius: 20px;
 }
 
-article{
+#paragraph{
         max-width: 900px;
         padding: 10px;
         max-height: 160px;
@@ -105,13 +102,13 @@ article{
         margin-top: 20px;
 }
 
-article.open{
+#paragraph.open{
     max-height: 900px;
 }
 
 #paragraphButton{
         background: black;
-        color: white;
+        color: #e0fbfc;
         padding: 0.6rem;
         margin-top: 15px;
         border: none;
@@ -120,11 +117,7 @@ article.open{
 
 #paragraphButton:hover{
     cursor: pointer;
-    background: rgb(38,82,95);
-}
-
-#contact{
-    font-weight: bold;
+    background: #844933;
 }
 
 #scrollup {
@@ -134,10 +127,79 @@ article.open{
     border-radius: 25px;
     padding: 15px;
     background-color: black;
-    color: white;
+    color: #e0fbfc;
 }
 
 #scrollup:hover{
     cursor: pointer;
-    background: rgb(38,82,95);
+    background: #844933;
+}
+
+/* Contact Form */
+
+#contact{
+    font-weight: bold;
+    text-align: center;
+}
+
+#contact-button{
+    background: black;
+    color: #e0fbfc;
+    padding: 0.6rem;
+    margin-top: 15px;
+    border: none;
+    border-radius: 4px;
+}
+
+#contact-button:hover{
+    cursor: pointer;
+    background: #ee6c4d;
+}
+
+#bottommainpage{
+    background-color: #b99984;
+    padding: 20px 100px;
+    margin-bottom: 18px;
+    border-radius: 20px;
+}
+
+/* Login Form */
+
+#submit-button{
+    background: black;
+    color: #e0fbfc;
+    padding: 0.6rem;
+    margin-top: 15px;
+    border: none;
+    border-radius: 4px;
+}
+
+#submit-button:hover{
+    cursor: pointer;
+    background: #ee6c4d;
+}
+
+#Lform{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#login{
+    background-color: #b99984;
+    padding: 20px 100px;
+    margin: 18px;
+    border-radius: 20px;
+}
+
+
+/* Both forms */
+label, input, #submit-button, #contact-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    width: 200px;
+    line-height: 26px;
+    margin-bottom: 10px;
 }
